force-app/main/default/objects/Settlement_Account__c/Settlement_Account__c.object-meta.xml
<CustomObject>
    <label>Settlement Account</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Settlement Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>