force-app/main/default/objects/Settlement_Account__c/fields/IsValidCloudEvent__c.field-meta.xml
<CustomField>
    <fullName>IsValidCloudEvent__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Formula boolean field to indicate if the Settlement Account is valid to trigger the
        Cloud Event</description>
    <formula>AND(
        NOT(ISBLANK(Settlement__r.Loan_Application_Number__c)),
        NOT(ISBLANK(Settlement__r.Loan_Application_Number__r.Sync_Status__c)),
        NOT(INCLUDES(Settlement__r.Loan_Application_Number__r.Sync_Status__c, &quot;Blocked&quot;)),
        INCLUDES(Settlement__r.Loan_Application_Number__r.Sync_Status__c, &quot;Broker Org&quot;)
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsValidCloudEvent</label>
    <type>Checkbox</type>
</CustomField>