force-app/main/default/objects/Settlement_Account__c/fields/Loan_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Settlement_Domain</complianceGroup>
    <description>Residential Loan Application number</description>
    <formula>Settlement__r.Loan_Application_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application Id</label>
    <type>Text</type>
</CustomField>