force-app/main/default/objects/Settlement_Account__c/fields/Nominated_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Account_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Settlement Domain</complianceGroup>
    <description>Account Number for nominated account</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Nominated Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>