force-app/main/default/objects/Settlement_Account__c/fields/Nominated_By__c.field-meta.xml
<CustomField>
    <fullName>Nominated_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Storing Loan Applicant&apos;s reference</description>
    <label>Nominated By</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Settlement Accounts</relationshipLabel>
    <relationshipName>Settlement_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>