force-app/main/default/objects/Settlement_Account__c/fields/Nominated_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Nominated_By_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>The Details of the Party who has added the Account details on the Settlement Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nominated By Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>