force-app/main/default/objects/Settlement_Account__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Master detail to settlement</description>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Settlement Accounts</relationshipLabel>
    <relationshipName>Settlement_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>