force-app/main/default/objects/Settlement_Account__c/fields/Settlement_Id__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Settlement_Domain</complianceGroup>
    <description>the ID of the parent Settlement entity</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Settlement Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>